[package]
name = "rebound"
version = "0.1.0"
description = "Full runtime reflection for Rust, with lifetime safety"
keywords = ["reflection", "reflect", "no_std"]
categories = ["memory-management"]
repository = "https://github.com/CraftSpider/rebound"
documentation = "https://docs.rs/rebound"
authors = ["Rune Tynan <runetynan@gmail.com>"]
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"

[features]
default = ["core", "alloc", "std"]

core = []
alloc = []
std = []
never-type = []

[dependencies]
rebound-proc = { version = "0.1.0", path = "./rebound-proc" }

[dev-dependencies]
trybuild = "^1.0"
