[package]
name = "rebound"
version = "0.4.2"
description = "Full runtime reflection for Rust, with lifetime safety"
keywords = ["reflection", "reflect", "no_std"]
categories = ["memory-management"]
repository = "https://github.com/CraftSpider/rebound"
documentation = "https://docs.rs/rebound"
authors = ["Rune Tynan <runetynan@gmail.com>"]
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"

[features]
default = ["core", "alloc", "std"]

# Reflection support for various crates
all-crates = ["core", "alloc", "std"]
core = []
alloc = ["core"]
std = ["core", "alloc"]

# Reflection support for certain nightly features
all-features = ["never-type"]
never-type = []

[dependencies]
rebound-proc = { version = "0.3.0", path = "./rebound-proc" }
once_cell = "1.8"
paste = "1.0"
craft-eraser = "0.3.0"

[dev-dependencies]
trybuild = "^1.0"
